--- a/index2.html
+++ b/index2.html
@@ -10,7 +10,7 @@
     <div>
         <p>Informe o cep</p>
         <table>
-            <tr> <td>CEP:</td> <td><input type="text" id="txtCep"></td> </tr>
+            <tr> <td>CEP:</td> <td><input type="text" id="txtCEP"></td> </tr>
             <tr><td>Logradouro:</td> <td><input type="text" id="txtLog"> </td></tr>
             <tr><td>Estado: </td><td><input type="text" id="txtEs"> </td></tr>
             <tr><td>Bairro:</td> <td><input type="text" id="txtBairro"> </td></tr>
